[project]
name = "diplomacy-adjudicator"
version = "0.0.1"
authors = [
    { name="Wolf", email="wolf@zv.cx" },
]
description = "A Diplomacy Adjudicator"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
]
dependencies = [
    "click",
]

[project.optional-dependencies]
dev = [
    "black",
    "coverage",
    "ipython",
    "isort",
    "mypy",
    "pytest",
]

[project.urls]
"Homepage" = "https://github.com/wolf/diplomacy-adjudicator"
"Bug Tracker" = "https://github.com/wolf/diplomacy-adjudicator/issues"

[build-system]
requires = ["hatch"]
build-backend = "hatchling.build"

[project.scripts]
diplomacy-adjudicator = "diplomacy_adjudicator.cli:cli"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
